--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>spoodblort bookie tools</title>
+    <title>🥊 we4sel's bookie tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./localstorage.js"></script>
     <script src="./table.js"></script>
@@ -14,7 +14,7 @@
 <body class="bg-gray-950 text-gray-100 min-h-screen">
     <header class="border-b border-gray-800 bg-gray-900/80 backdrop-blur sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
-            <h1 class="text-xl font-bold">spoodblort bookie tools</h1>
+            <h1 class="text-xl font-bold">🥊 we4sel's bookie tools</h1>
             <nav class="flex items-center gap-2">
                 <button data-route="today" class="nav-btn px-3 py-2 rounded-md text-sm font-semibold hover:bg-gray-800" aria-current="page">today's matchups</button>
                 <button data-route="fights" class="nav-btn px-3 py-2 rounded-md text-sm font-semibold hover:bg-gray-800">fights</button>
