--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥊 we4sel's bookie tools</title>
+    <title> 🐙The Feature Creep's 🥊SPOODBLORT bookie tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./localstorage.js"></script>
     <script src="./table.js"></script>
