--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body class="bg-gray-950 text-gray-100 min-h-screen">
     <header class="border-b border-gray-800 bg-gray-900/80 backdrop-blur">
         <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
-            <h1 class="text-xl font-bold">🥊 we4sel's bookie tools</h1>
+            <h1 class="text-xl font-bold">🐙The Feature Creep's 🥊SPOODBLORT bookie tools</h1>
             <nav class="flex items-center gap-2">
                 <button data-route="today" class="nav-btn px-3 py-2 rounded-md text-sm font-semibold hover:bg-gray-800" aria-current="page">today's matchups</button>
                 <button data-route="fights" class="nav-btn px-3 py-2 rounded-md text-sm font-semibold hover:bg-gray-800">fights</button>
